# csce_5210_pre_release

./: README.md
job_scheduler/: README.md  environment.yml  pyproject.toml
job_scheduler/docs/: job_scheduler_report.docx  ~$b_scheduler_report.docx
job_scheduler/job_scheduler/: README.md  model.py  optimizer.py  scheduler.py
job_scheduler/notebooks/: generate_schedule.ipynb  job_scheduler.ipynb  schedule_optimization.ipynb
job_scheduler/tests/: conftest.py  test_generate_schedule.py  test_optimizer.py  test_scheduler.py
traffic_simulator/: README.md  Untitled.ipynb  environment.yml  pyproject.toml
traffic_simulator/docs/: traffic_simulator_report.docx
traffic_simulator/notebooks/: Tutorial1Spring2024.ipynb  n1_n2_truth_table_data.csv  n1_n2_truth_table_data.xlsx  n1_n2_truth_table_data_a.csv  n1_n2_truth_table_data_just_data.xlsx  traffic_simulator-debug-r2.ipynb  traffic_simulator.ipynb
traffic_simulator/tests/: conftest.py  test_city_map.py  test_notebook.py  test_simulation.py  test_traffic_analyzer.py
traffic_simulator/traffic_simulator/: city_map.py  model.py  simulation.py  traffic_analysis.py  traffic_analyzer.py  traffic_simulation.py
